desktop display looks good

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <header>
-      <div class="max-width-wrapper">
+      <div class="max-width-wrapper one">
         <div class="intro-chunk">
-          <h1 class="title">Huckleberry</h1>
+          <h1 class="title"><strong>Huckleberry</strong></h1>
 
           <p>
             An avant-garde agency focused on connecting
@@ -25,7 +25,7 @@
       </div>
     </header>
     <main>
-      <section class="max-width-wrapper">
+      <section class="max-width-wrapper two">
         <div class="card">
           <h2 class="indented-heading">Wealth comes from operations</h2>
           <p>
